fix(bubble): increase gaps and justify center

--- a/app/assets/stylesheets/_notes.scss
+++ b/app/assets/stylesheets/_notes.scss
@@ -81,7 +81,7 @@
       display: flex;
       flex-direction: row;
       align-items: baseline;
-      gap: 0.25rem;
+      gap: 0.75rem;
       font-size: var(--sn-stylekit-font-size-p);
       white-space: nowrap;
     }
